# python

project1/: db.sqlite3
project1/config/: settings.py  urls.py
project1/root/: apps.py  models.py  urls.py  views.py
project1/root/migrations/: 0001_initial.py  0002_alter_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py  0005_alter_profile_avatar.py
project1/templates/: contact.html  home.html
project3/: .pdm.toml  pyproject.toml
project3/mysite/: settings.py
project4/: .env  .pdm.toml  pyproject.toml
project4/mysite/: db.sqlite3
project4/mysite/mysite/: settings.py
project4/mysite/polls/: models.py  tests.py  views.py
project4/mysite/polls/migrations/: 0001_initial.py
project4/mysite/polls/templates/polls/: detail.html  index.html
