[project]
name = ""
version = ""
description = ""
authors = [
    {name = "miq28", email = "92211442+miq28@users.noreply.github.com"},
]
license-expression = "MIT"
dependencies = [
    "django>=4.0.3",
    "pip>=22.0.4",
]
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
